hw1-2/k8s/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-backend-app
  namespace: k8s-hw
  labels:
    app: k8s-test-backend-app
    version: latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-test-backend-app
  template:
    metadata:
      name: k8s-test-backend-app
      labels:
        app: k8s-test-backend-app
        version: latest
    spec:
      containers:
        - name: k8s-test-backend-app
          image: fastrapier1/k8s-test-backend-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: app-data
              mountPath: /var/lib/k8s-test-backend/data
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: k8s-test-backend-pvc
      restartPolicy: Always
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
---
